feat: write title

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<meta content="Encrypted notes and not much else." name="description" />
 
 		<link href="/favicon.webp" rel="icon" type="image/webp" />
+		<title>Concise</title>
 	</head>
 	<body>
 		<div id="root"></div>
