--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link href="/favicon.webp" rel="icon" type="image/webp" />
 		<title>Concise</title>
 	</head>
-	<body>
+	<body style="margin: 0">
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
